--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
     </licenses>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <poi.version>4.1.1</poi.version>
     </properties>
