--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.xinshepherd</groupId>
     <artifactId>easy-excel</artifactId>
-    <version>1.3.1</version>
+    <version>1.4.0-SNAPSHOT</version>
 
     <name>Easy excel</name>
     <description>
